# learnopengl

./: .dir-locals.el  .gitmodules  CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
res/: simple.frag
res/shaders/: simple.frag  simple.vert
src/: main.cpp  shader.cpp  shader.h
